<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarContacto">

    <EditText
        android:id="@+id/Amovil"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:autofillHints="@string/movil"
        android:drawableLeft="@drawable/ic_movil"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/movil"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Anombre"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/Anombre"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:autofillHints="@string/nombre"
        android:drawableLeft="@drawable/ic_text"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text|textPersonName|textAutoComplete|textAutoCorrect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/btnPrimario"
        android:drawableTop="@drawable/ic_volver"
        android:onClick="volverPantallaPrincipal"
        android:text="@string/btnVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="93dp"
        android:layout_height="72dp"
        android:autoText="false"
        android:backgroundTint="@color/btnActualizar"
        android:drawableTop="@drawable/ic_add"
        android:onClick="actualizarContacto"
        android:text="@string/btnEditar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <TextView
        android:id="@+id/cTitulo"
        android:layout_width="281dp"
        android:layout_height="61dp"
        android:text="@string/tituloEditar"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <EditText
        android:id="@+id/Aemail"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:autofillHints="@string/email"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress|textAutoComplete|textAutoCorrect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Amovil"
        app:layout_constraintVertical_bias="0.068" />

</androidx.constraintlayout.widget.ConstraintLayout>